--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = vnpy_femas
-version = 1.0.0
+version = 1.0.1
 url = https://www.vnpy.com
 license = MIT
 author = Xiaoyou Chen
 author_email = xiaoyou.chen@mail.vnpy.com
-description = FEMAS gateway for vn.py quant trading framework.
+description = FEMAS gateway for VeighNa quant trading framework.
 long_description = file: README.md
 long_description_content_type = text/markdown
 keywords =
